# micropython-wasm

./: MANIFEST.in  README.md  future.md  pyproject.toml  research.md
.github/workflows/: publish.yml  test.yml
micropython_wasm/: __init__.py  cli.py
micropython_wasm/artifacts/: micropython-wasi.wasm
micropython_wasm/usercmodule/host/: hostmodule.c  micropython.mk
scripts/: build_micropython_wasi.py
tests/: test_cli.py  test_host_functions.py  test_micropython_wasm.py  test_persistent_session.py  test_replay_session.py  test_runtime_semantics.py  test_session.py
